<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Work Time</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="login_button">Login</string>
    <string name="need_help">Precisa de ajuda?</string>
    <string name="create_account">Crie uma conta</string>

    <string name="botao_entrada">Entrada</string>
    <string name="botao_pausa">Pausa</string>
    <string name="botao_retorno">Retorno</string>
    <string name="botao_saida">Saída</string>

    <string-array name="itens_menu">
        <item>Perfil</item>
        <item>Configurações</item>
        <item>Registros</item>
        <item>Notificações</item>
        <item>Sobre</item>
        <item>Sair</item>
    </string-array>

    <string-array name="meses_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>