<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.MainActivity">

    <!-- AppBarLayout (Cabeçalho com a Toolbar e o botão de abrir menu) -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <!-- Button to open the navigation drawer -->
                <ImageButton
                    android:id="@+id/btn_abrir_menu"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Abrir menu"
                    android:src="@drawable/ic_menu" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- ViewGroup principal agrupando o conteúdo -->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Conteúdo principal -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Título ou outras informações que você deseja exibir -->
            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- GridLayout para os botões -->
            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:columnCount="2"
                android:orientation="horizontal"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitulo">

                <!-- Botão Entrada -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botaoEntrada"
                    style="@style/EstiloBotaoPersonalizado"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/verde"
                    android:drawableLeft="@drawable/enter_svgrepo_com"
                    android:text="@string/botao_entrada"
                    android:textColor="@color/black" />


                <!-- Botão Pausa -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botaoPausa"
                    style="@style/EstiloBotaoPersonalizado"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="05dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/amarelo"
                    android:drawableLeft="@drawable/ic_pause"
                    android:text="@string/botao_pausa"
                    android:textColor="@color/black" />

                <!-- Botão Retorno -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botaoRetorno"
                    style="@style/EstiloBotaoPersonalizado"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="05dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/azul"
                    android:drawableLeft="@drawable/ic_retorno"
                    android:text="@string/botao_retorno"
                    android:textColor="@color/black" />

                <!-- Botão Saída -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botaoSaida"
                    style="@style/EstiloBotaoPersonalizado"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="05dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/vermelho"
                    android:drawableLeft="@drawable/ic_saida"
                    android:text="@string/botao_saida"
                    android:textColor="@color/black" />

            </GridLayout>

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <!-- Navigation Drawer (Menu lateral) -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:menu="@menu/menu_navigation" />

</androidx.drawerlayout.widget.DrawerLayout>
